# adaptive-tempscaling

./: .gitignore  pyproject.toml
adaptive_tempscaling/: adats_utils.py  bayesian_models.py  benchmark_pretrained.py  benchmark_pretrained_svhn.py  bnn_models.py  download_data.py  exp_data_eff.py  mixNmatch_cal.py  models.py  pyro_models.py  scipy_models.py  train_model.py  utils.py
adaptive_tempscaling/notebooks/: LRE17.ipynb  analysis_LeNet5.ipynb  analysis_architectures_resnet50.ipynb  analysis_entropy_temperature.ipynb  analysis_linearTS.ipynb  benchmark_pretrained_results.ipynb  bnn-mi.ipynb  exp_data_eff_results.ipynb  gradients_TSmodels.ipynb  mcmc-TS.ipynb
code/: adats_utils.py  benchmark_pretrained.py  download_data.py  exp_data_eff.py  mixNmatch_cal.py  models.py  scipy_models.py  train_model.py  train_resnetCIFAR10.py  utils.py
code/notebooks/: Untitled.ipynb  analysis_DenseNet121.ipynb  analysis_LeNet5.ipynb  analysis_ResNet50.ipynb  analysis_architectures_resnet50.ipynb  analysis_entropy_temperature.ipynb  analysis_linearTS.ipynb  benchmark_pretrained_results.ipynb  exp_data_eff_results.ipynb
results/pretrained/: logitsJuan_BRI_reg.csv  logitsJuan_BRI_reg_0.csv  logitsJuan_ECE_reg.csv  logitsJuan_ECE_reg_0.csv  logitsJuan_NLL_reg.csv  logitsJuan_NLL_reg_0.csv
